# rewards-v1

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  Untitled Diagram.drawio  docker-compose.yml  dockerfile.dapp  dockerfile.relayer  justfile  package.json
.github/workflows/: pull_request.yml  push.yml
app/: .gitignore  README.md  index.html  package.json  vite.config.ts
app/src/: App.svelte  helper.ts
app/src/assets/: bounty.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
dapp/: README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
dapp/src/: app.css
dapp/src/components/: assistance.svelte
dapp/src/globalStore/: index.ts
dapp/src/lib/: index.ts  mint.spec.ts  mint.ts  types.ts
dapp/src/lib/assets/: bounty.json
dapp/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  index.svelte
dapp/src/routes/create-bounty/: +page.svelte  +page.ts
dapp/src/routes/login/github/: +server.ts
dapp/src/routes/login/github/callback/: +server.ts
dapp/src/routes/mint/github/: +server.ts
dapp/src/routes/mint/github/status/: +server.ts
dapp/static/: bounty.json
deployment/: .gitignore  Pulumi.aws-ecs-dev.yaml  Pulumi.dev2.yaml  Pulumi.yaml  README.md  go.mod  go.sum  main.go
programs/bounty/: Cargo.toml  README.md  lib.rs
programs/bounty/src/: lib.rs
programs/bounty/src/instructions/: add_bounty_denomination.rs  add_relayer.rs  claim.rs  complete_bounty.rs  complete_bounty_as_relayer.rs  create_bounty.rs  create_domain.rs  deactivate_bounty_denomination.rs  deactivate_domain.rs  dontate_to_bounty.rs  initialize.rs  mod.rs  propose_bounty_solution.rs  register_solver.rs  release_bounty.rs  remove_relayer.rs
programs/bounty/src/state/: bounty.rs  bounty_solution.rs  bounty_state.rs  denomination.rs  domain.rs  domain_data.rs  domain_identifier.rs  mod.rs  protocol.rs  protocol_collector.rs  relayer.rs  solver.rs
programs/bounty/src/utils/: constants.rs  errors.rs  mod.rs
programs/bounty/state/: mod.rs
programs/git-wallet-v1/: Cargo.toml
programs/git-wallet-v1/src/: lib.rs  main.rs
programs/identity/: Cargo.toml
programs/identity/src/: lib.rs
programs/identity/src/instructions/: create_user.rs  mod.rs
programs/identity/src/state/: mod.rs  protocol.rs  user.rs
programs/identity/src/utils/: mod.rs
programs/identity/tests/: test.rs
programs/identity/tests/lib/: lib.rs
programs/rewards-v1/: Cargo.toml  README.md
programs/rewards-v1/src/: lib.rs
programs/rewards-v1/src/instructions/: create_user.rs  escrow.rs  initialize.rs  mint_nft.rs  mod.rs
programs/rewards-v1/src/state/: domain.rs  mod.rs  relayer.rs  user.rs
programs/rewards-v1/tests/: test.rs
programs/rewards-v1/tests/lib/: README.md  lib.rs
relayer/: .gitignore  Cargo.toml  README.md  relayer.json
relayer/src/: main.rs
relayer/src/bounty/: mod.rs
relayer/src/bounty_proto/: mod.rs
relayer/src/bounty_sdk/: mod.rs
relayer/src/domains/: bounty.rs  domain.rs  domains.rs  github.rs  mod.rs  utils.rs
relayer/src/domains/github/: issues.rs  mod.rs  utils.rs
relayer/src/jobs/: verification.rs
scripts/: addRelayer.ts  initializeProtocol.ts
sdk/: Cargo.toml  README.md
sdk-ts/: .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.tsbuildinfo
sdk-ts/src/: index.ts  pda.ts  utils.ts
sdk-ts/src/idl/: bounty.json  bounty.ts
sdk/src/: accounts.rs  lib.rs  program.rs  utils.rs
tests/: pdas.ts  rewards-v1.ts  utils.ts
