[package]
name = "bounty-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "^0.27.0"
anchor-spl = "^0.27.0"
env_logger = "^0.9.3"
spl-associated-token-account = "1.1.2"
log = "^0.4.17"
home = "0.5.4"
clap = {version="~4",features=["derive"]}
bounty = {path="./../programs/bounty"}