[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
rust="1.66.1"


[[bin]]
name="relayer"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "^0.27.0"
anchor-spl = "^0.27.0"
spl-associated-token-account = "^1.1.1"
zeroize="~1.*"
tokio = { version = "~1", features = ["full"] }
log = "^0.4.17"
regex = "^1.7.1"
async-trait = "^0.1.61"
env_logger = "^0.9.3"
thiserror = "^1.0.38"
dotenv = "^0.15.0"
jsonwebtoken = "^7.2.0"
serde_json = "^1.0"
serde = "^1.0.152"
reqwest = {version="0.11.13",feature=["json"]}
base64 = "^0.21.0"
actix-web = "4"
actix-files = "0.6.2"
bounty = {path="../programs/bounty"}
coingecko = "1.0.1"
octocrab = { version="=0.15.4"}
ed25519-dalek = "1.0.1"
futures = "0.3.26"
chrono = "0.4.23"
bounty-sdk = {path="../sdk"}