[package]
name = "bounty-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "^0.27.0"
anchor-spl = "^0.27.0"
thiserror = "^1.0.38"
bounty = {path="../programs/bounty"}
dotenv = "^0.15.0"
log = "^0.4.17"
spl-associated-token-account = "^1.1.1"

