[package]
name = "bounty"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust="1.66.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="^0.27.0",feature=["init_if_needed"]}
anchor-spl = "^0.27.0"
solana-program = "~1.14.16"
bytemuck = "1.13.1"
