[package]
name = "bounty"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust = "1.79.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", feature = ["init_if_needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
