[package]
name = "git-wallet-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
octocrab = { git = "https://github.com/XAMPPRocky/octocrab.git" }
byte-order = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# github-api = "0.13.0"
# zeroize = "1.4"
[dev-dependencies]
anchor-client = "0.24.2"
solana-program-test = "1.9.15"
solana-program = "1.9.15"
spl-token = "3.2.0"
spl-associated-token-account = "1.0.3"